# lgbm

./: .gitignore  CMakeLists.txt  build-python.sh  run.sh
include/LightGBM/: application.h  dataset.h  dataset_loader.h
source/: CMakeLists.txt
source/play/: CMakeLists.txt  play_app.cpp
src/application/: application.cpp
src/io/: dataset_loader.cpp
test/regression/: train.conf
